{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 22,
  "lineage": "e1bd8ec1-27f4-e312-e54a-71b819bf0c04",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ecs_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ebc9e780cde07dd",
            "arn": "arn:aws:ec2:ap-south-1:378471046835:instance/i-0399fc946f06d8652",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ecsInstanceProfile",
            "id": "i-0399fc946f06d8652",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02645d9814de8be28",
            "private_dns": "ip-10-0-0-150.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.150",
            "public_ip": "13.235.115.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f6c0e5cbca2fad74",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d319d56145871675",
            "tags": {
              "Name": "ecs_instance-0"
            },
            "tags_all": {
              "Name": "ecs_instance-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d6e0109a6e02917"
            ]
          },
          "dependencies": [
            "aws_ecs_cluster.ecs_poc_cluster",
            "aws_iam_instance_profile.ecs_instance_profile",
            "aws_iam_role.ecs_instance_role",
            "aws_key_pair.ec2_key_pair",
            "aws_security_group.ecs_vpc",
            "aws_subnet.ecs_vpc",
            "aws_vpc.ecs_vpc",
            "tls_private_key.new_key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:internet-gateway/igw-06ef29ba72b3c8560",
            "id": "igw-06ef29ba72b3c8560",
            "owner_id": "378471046835",
            "tags": {
              "Name": "ecs_vpc-igw"
            },
            "tags_all": {
              "Name": "ecs_vpc-igw"
            },
            "vpc_id": "vpc-0573cf56c83ed63f2"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:route-table/rtb-09998bbb33caf5d7d",
            "id": "rtb-09998bbb33caf5d7d",
            "owner_id": "378471046835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ef29ba72b3c8560",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs_vpc-route-table"
            },
            "tags_all": {
              "Name": "ecs_vpc-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0573cf56c83ed63f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecs_vpc",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079677d3bd8da7b16",
            "route_table_id": "rtb-09998bbb33caf5d7d",
            "subnet_id": "subnet-0d319d56145871675"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_vpc",
            "aws_route_table.ecs_vpc",
            "aws_subnet.ecs_vpc",
            "aws_vpc.ecs_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccade6d4886a7de6",
            "route_table_id": "rtb-09998bbb33caf5d7d",
            "subnet_id": "subnet-063694acbc7dad060"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_vpc",
            "aws_route_table.ecs_vpc",
            "aws_subnet.ecs_vpc",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:security-group/sg-04d6e0109a6e02917",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d6e0109a6e02917",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_poc_sg",
            "name_prefix": "",
            "owner_id": "378471046835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs_poc_sg"
            },
            "tags_all": {
              "Name": "ecs_poc_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0573cf56c83ed63f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:subnet/subnet-0d319d56145871675",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d319d56145871675",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378471046835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_vpc-subnet-0"
            },
            "tags_all": {
              "Name": "ecs_vpc-subnet-0"
            },
            "vpc_id": "vpc-0573cf56c83ed63f2"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:subnet/subnet-063694acbc7dad060",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063694acbc7dad060",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378471046835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs_vpc-subnet-1"
            },
            "tags_all": {
              "Name": "ecs_vpc-subnet-1"
            },
            "vpc_id": "vpc-0573cf56c83ed63f2"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:378471046835:vpc/vpc-0573cf56c83ed63f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0006f47fcec158639",
            "default_route_table_id": "rtb-046542aeaa804386e",
            "default_security_group_id": "sg-01cf5f9028ea2c022",
            "dhcp_options_id": "dopt-0aea9e766ef934738",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0573cf56c83ed63f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-046542aeaa804386e",
            "owner_id": "378471046835",
            "tags": {
              "Name": "ecs_vpc"
            },
            "tags_all": {
              "Name": "ecs_vpc"
            }
          }
        }
      ]
    }
  ]
}